--- a/package.json
+++ b/package.json
@@ -9,13 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.18",
+    "@types/react-native-dotenv": "^0.2.0",
     "expo": "~49.0.12",
     "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.5"
+    "expo-updates": "^0.18.14",
+    "firebase": "^10.4.0",
+    "react": "^18.2.0",
+    "react-native": "^0.72.5",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-elements": "^3.4.3",
+    "react-native-paystack-webview": "^4.0.3",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-toast-message": "^2.1.6",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-webview": "13.2.2",
+    "react-paystack": "^4.0.3",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "typescript": "^5.2.2"
   },
   "private": true
 }
